--- a/index.html
+++ b/index.html
@@ -56,43 +56,43 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                Jiannan Wu</a><sup>*2,1</sup>,
+                <a href="https://scholar.google.com/citations?user=1euA66EAAAAJ&hl=en" target="_blank">Jiannan Wu</a><sup>*2,1</sup>,
               </span>
               <span class="author-block">
                 Muyan Zhong</a><sup>*3</sup>,
               </span>
               <span class="author-block">
-                Sen Xing</a><sup>*3</sup>,
+                <a href="https://scholar.google.com/citations?user=2ZZz69AAAAAJ&hl=en" target="_blank">Sen Xing</a><sup>*3</sup>,
               </span>
               <span class="author-block">
-                Zeqiang Lai</a><sup>*4</sup>,
+                <a href="https://scholar.google.com/citations?user=WUMu1KkAAAAJ&hl=en" target="_blank">Zeqiang Lai</a><sup>*4</sup>,
               </span>
               <span class="author-block">
-                Zhaoyang Liu</a><sup>*5,1</sup>,
+                <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en" target="_blank">Zhaoyang Liu</a><sup>*5,1</sup>,
               </span>
               <span class="author-block">
-                Wenhai Wang</a><sup>*1</sup>,
+                <a href="https://scholar.google.com/citations?user=WM0OglcAAAAJ&hl=en" target="_blank">Wenhai Wang</a><sup>*1</sup>,
               </span>
               <span class="author-block">
-                Zhe Chen</a><sup>6</sup>,
+                <a href="https://scholar.google.com/citations?user=j1rq_lYAAAAJ&hl=en" target="_blank">Zhe Chen</a><sup>6</sup>,
               </span>
               <span class="author-block">
-                Xizhou Zhu</a><sup>3,7,1</sup>,
+                <a href="https://scholar.google.com/citations?user=02RXI00AAAAJ&hl=en" target="_blank">Xizhou Zhu</a><sup>3,7,1</sup>,
               </span>
               <span class="author-block">
-                Lewei Lu</a><sup>7,1</sup>,
+                <a href="https://scholar.google.com/citations?user=zdgKJXIAAAAJ&hl=en" target="_blank">Lewei Lu</a><sup>7,1</sup>,
               </span>
               <span class="author-block">
-                Tong Lu</a><sup>6</sup>,
+                <a href="https://scholar.google.com/citations?user=mgqhQGkAAAAJ&hl=en" target="_blank">Tong Lu</a><sup>6</sup>,
               </span>
               <span class="author-block">
-                Ping Luo</a><sup>2</sup>,
+                <a href="https://scholar.google.com/citations?user=aXdjxb4AAAAJ&hl=en" target="_blank">Ping Luo</a><sup>2</sup>,
               </span>
               <span class="author-block">
-                Yu Qiao</a><sup>1</sup>,
+                <a href="https://scholar.google.com/citations?user=gFtI-8QAAAAJ&hl=en" target="_blank">Yu Qiao</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                Jifeng Dai</a><sup>&dagger; 3,1</sup>
+                <a href="https://scholar.google.com/citations?user=SH_-B_AAAAAJ&hl=en" target="_blank">Jifeng Dai</a><sup>&dagger; 3,1</sup>
               </span>
               <!-- <span class="author-block">
                 <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
