--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1 class="title is-1 publication-title">VisionLLM v2: An End-to-End Generalist Multimodal Large Language Model for Hundreds of Vision-Language Tasks</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">
+              <!-- <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=1euA66EAAAAJ&hl=en" target="_blank">Jiannan Wu</a><sup>*2,1</sup>,
               </span>
               <span class="author-block">
@@ -93,10 +93,10 @@
               </span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=SH_-B_AAAAAJ&hl=en" target="_blank">Jifeng Dai</a><sup>&dagger; 3,1</sup>
-              </span>
-              <!-- <span class="author-block">
-                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
               </span> -->
+              <span class="author-block">
+                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+              </span>
             </div>
 
             <div class="is-size-5 publication-authors">
@@ -179,7 +179,7 @@
 
 
 <!-- Teaser video-->
-<section class="hero teaser">
+<!-- <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
@@ -192,7 +192,7 @@
       </h2>
     </div>
   </div>
-</section>
+</section> -->
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
