--- a/index.html
+++ b/index.html
@@ -172,7 +172,14 @@
             It not only allows flexible transmission of task information and gradient feedback between the MLLM and multiple downstream decoders but also effectively resolves training conflicts in multi-tasking scenarios. In addition, to support the diverse range of tasks, we carefully collected and combed training data from hundreds of public vision and vision-language tasks. In this way, our model can be joint-trained end-to-end on hundreds of vision language tasks and generalize to these tasks using a set of shared parameters through different user prompts, achieving performance comparable to task-specific models. 
             We believe VisionLLM v2 will offer a new perspective on the generalization of MLLMs.
           </p>
-          <img src="./static/images/moti.png" alt="FID" class="method-overview-full-img  method-overview" draggable="false" />
+        </div>
+      </div>
+    </div>
+     <!-- teaser -->
+    <div class="container is-max-desktop">
+      <div class="columns is-centered">
+        <div class="column is-four-fifths">
+            <img src="static/images/moti.png" alt="Teaser image."/>
         </div>
       </div>
     </div>
