--- a/index.html
+++ b/index.html
@@ -196,17 +196,22 @@
         <h2 class="title is-3">VisionLLM v2</h2>
         <div class="content has-text-justified">
           <p>
-            <b>Framework.</b>
+            <b>Architecture.</b>
             VisionLLM v2 consists of four parts:
           </p>
+          <p>
+            <b>Super-Link Technique.</b>
+            VisionLLM v2 consists of four parts:
+          </p>
+          <img src="./static/images/arch.png" alt="architecture" class="method-overview-full-img  method-overview" draggable="false" />
         </div>
       </div>
     </div>
-    <div class="columns is-centered ">
+    <!-- <div class="columns is-centered ">
       <div class="column is-four-fifths ">
         <img src="./static/images/arch.png" />
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
 <!-- End architecture-->
