add quanti results

--- a/index.html
+++ b/index.html
@@ -223,6 +223,81 @@
 </section>
 <!-- End architecture-->
 
+<!-- Quantative results -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-three-fifths">
+          <h2 class="title is-3">Qualitative Results</h2>
+          <h2 class="title is-4">Multimodal Dialogue</h2>
+        </div>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+      <div id="results-carousel" class="carousel results-carousel">
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/llava.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Multimodal dialoguage benchmarks.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/caption.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Image captioning and region captioning.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/region-rec-vcr.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Region recognition and region visual commonsense reasoning.
+            </h2>
+          </div>
+      </div>
+    </div>
+
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-three-fifths">
+          <h2 class="title is-4">Visual Perception</h2>
+        </div>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+      <div id="results-carousel" class="carousel results-carousel">
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/det.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Object detection and instance segmentation.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/rec.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Referring expression comprehension.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/res.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Referring expression segmentation.
+            </h2>
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End quantative results -->
+
+
+
 
 <!-- Qualitative results -->
 <section class="section">
@@ -240,7 +315,7 @@
     <div class="columns is-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-5">Object Detection and Segmentation</h2>
-        <img src="./static/images/vis_det.jpg"/>
+        <img src="./static/images/vis_det.png"/>
       </div>
     </div>
     <div class="columns is-centered">
@@ -252,13 +327,13 @@
     <div class="columns is-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-5">Visual Grounding</h2>
-        <img src="./static/images/vis_vg.jpg"/>
+        <img src="./static/images/vis_vg.png"/>
       </div>
     </div>
     <div class="columns is-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-5">Pose Estimation</h2>
-        <img src="./static/images/vis_pose.jpg"/>
+        <img src="./static/images/vis_pose.png"/>
       </div>
     </div>
     <div class="columns is-centered">
