add quanti results

--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@
           </div>
       </div>
     </div>
-
+    
+    <br>
+    <br>
+    
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-three-fifths">
@@ -288,6 +291,27 @@
             <img src="static/images/res.png" alt=""/>
             <h2 class="subtitle has-text-centered">
               Referring expression segmentation.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/pose.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Pose estimation.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/sod.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Salient object detection.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/cod.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Camouflaged object detection.
             </h2>
           </div>
       </div>
