add quanti results

--- a/index.html
+++ b/index.html
@@ -261,8 +261,7 @@
     </div>
     
     <br>
-    <br>
-    
+
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-three-fifths">
@@ -312,6 +311,13 @@
             <img src="static/images/cod.png" alt=""/>
             <h2 class="subtitle has-text-centered">
               Camouflaged object detection.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/interactive_seg.png" alt=""/>
+            <h2 class="subtitle has-text-centered">
+              Interactive segmentation. * The model is finetuned for the task.
             </h2>
           </div>
       </div>
