--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                 <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en" target="_blank">Zhaoyang Liu</a><sup>*5,1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=WM0OglcAAAAJ&hl=en" target="_blank">Wenhai Wang</a><sup>*1</sup>,
+                <a href="https://scholar.google.com/citations?user=j1rq_lYAAAAJ&hl=en" target="_blank">Zhe Chen</a><sup>6</sup>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=j1rq_lYAAAAJ&hl=en" target="_blank">Zhe Chen</a><sup>6</sup>,
+                <a href="https://scholar.google.com/citations?user=WM0OglcAAAAJ&hl=en" target="_blank">Wenhai Wang</a><sup>*1</sup>,
               </span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=02RXI00AAAAJ&hl=en" target="_blank">Xizhou Zhu</a><sup>3,7,1</sup>,
@@ -116,7 +116,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://arxiv.org/abs/2406.08394" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -127,7 +127,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://github.com/OpenGVLab/VisionLLM" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -434,9 +434,9 @@
       <pre><code>
         @article{wu2024visionllmv2,
           title={VisionLLM v2: An End-to-End Generalist Multimodal Large Language Model for Hundreds of Vision-Language Tasks},
-          author={Jiannan, Wu and Muyan, Zhong and Sen, Xing and Zeqiang, Lai and Zhaoyang, Liu and Wenhai, Wang and Zhe, Chen and Xizhou, Zhu and
+          author={Jiannan, Wu and Muyan, Zhong and Sen, Xing and Zeqiang, Lai and Zhaoyang, Liu and Zhe, Chen and Wenhai, Wang and Xizhou, Zhu and
           Lewei, Lu and Tong, Lu and Ping, Luo and Yu, Qiao and Jifeng, Dai},
-          journal={arXiv preprint arXiv:xxx},
+          journal={arXiv preprint arXiv:2406.08394},
           year={2024}
         }
       </code></pre>
