--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en" target="_blank">Zhaoyang Liu</a><sup>*5,1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=j1rq_lYAAAAJ&hl=en" target="_blank">Zhe Chen</a><sup>6</sup>,
+                <a href="https://scholar.google.com/citations?user=j1rq_lYAAAAJ&hl=en" target="_blank">Zhe Chen</a><sup>*6,1</sup>,
               </span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=WM0OglcAAAAJ&hl=en" target="_blank">Wenhai Wang</a><sup>*1</sup>,
